--- a/blogpost.html
+++ b/blogpost.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <head>
     <meta charset="UTF-8">
     <title>El titulo del post</title>
     <link rel="stylesheet" href="css/estilos.css">
-</head>
-<body>
+    </head>
+    <body>
+    <div id = "container">
+        <div id = "post">
+            <h1> Este es el titulo
+            atractivo e interensante
+            del post 
+            </h1>
+            <p> Y este es el parrafo de 
+            inicio donde vamos a explicar
+            </p>
+        </div>
+
+    </div>
     <h1>Aqui vamos a hacer un blog post</h1>
     <p>Y este es un parrafo de inicio</p>
-</body>
+    </body>
 </html>
