--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,9 @@
             <p> Y este es el parrafo de 
             inicio donde vamos a explicar
             </p>
+            <p>
+                prueba parrafo
+            </p>
         </div>
 
     </div>
